charts/camunda-platform-8.2/test/unit/identity/golden/service.golden.yaml
---
# Source: camunda-platform/charts/identity/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-platform-test-identity
  labels:
    app: camunda-platform
    app.kubernetes.io/name: identity
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.2.29"
    app.kubernetes.io/component: identity
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http
    targetPort: 8080
    protocol: TCP
  - port: 82
    name: metrics
    targetPort: 8082
    protocol: TCP
  selector:
    app: camunda-platform
    app.kubernetes.io/name: identity
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: identity
